# agentmesh

./: .dockerignore  .gitignore  2026-02-26-decentralized-agentmesh-design.md  2026-02-26-prd-v2.md  2026-02-26-web-prd.md  DEPLOY.md  Dockerfile  README.md  alembic.ini  demo.py  demo_simple.py  demo_simple_fixed.py  demo_working.py  docker-compose.prod.yml  docker-compose.yml  final_demo.py  mesh.pem  nginx.conf  pyproject.toml  quick_demo.py  run_demo.py  seed_agents.py  seed_registry.py  simulate_agents.py  verify_sorting.py  web-improvement-plan.md
.github/workflows/: ci.yml
docs/: DOCUMENTATION_STRUCTURE.md  GUIDEBOOK.md  INCENTIVES.md  README.md
docs/concepts/: capsules.md
docs/contributing/: guide.md
docs/deployment/: guide.md
docs/governance/: policy.md
docs/other/: AgentMesh科普软文：AI Agent世界的"互联网协议".md  AgentMesh项目设计文档.md  agentmesh_api_reference.md  agentmesh_demo.py  agentmesh_demo_simple.py  agentmesh_development_roadmap.md  agentmesh_docs_index.md  agentmesh_protocol_evomap_style.md  agentmesh_protocol_implementation.py  agentmesh_protocol_v1.md  agentmesh_quick_start.md  agentmesh_skill.md  agentmesh_skill_zh.md  agentmesh_week1_plan.md
docs/plans/: 2026-02-23-doc-parity-design.md  2026-02-26-decentralized-prd.md  2026-02-26-phase1-identity.md  2026-02-26-phase2-federation.md  2026-02-26-phase3-discovery.md  2026-02-26-phase4-handshake.md  2026-02-26-phase6-trust-scoring.md  2026-02-28-frontend-backend-enhancement.md  2026-02-28-frontend-backend-implementation.md  2026-03-02-backend-refactoring-phase1.md  2026-03-02-frontend-backend-integration.md  2026-03-02-production-hardening-phase3.md  (+1 more)
docs/protocol/: README.md  (+8 more)
docs_backup_20260223_223401/: README.md
examples/: rate_limit_demo.py  relay_demo.py
migrations/: env.py
scripts/: deploy_remote.sh  migrate_redis_zset.py  simulate_agent.py  simulate_massive_agents.py
src/: test_httpx.py
tests/: test_agent_card_model.py  test_agent_card_semantic.py  test_api_contract.py  test_api_pow_referral.py  test_api_trust.py  test_background_sync.py  test_cli_arguments.py  test_cli_connect.py  test_cli_invoke.py  test_cli_network_check.py  test_cli_trust.py  test_client_p2p.py  test_client_p2p_flow.py  test_client_relay_p2p.py  test_did_security.py  test_discovery_api.py  test_discovery_service.py  test_event_bus.py  test_federation.py  test_federation_peer_sync.py  test_federation_sync.py  test_federation_updates.py  test_gateway_routing.py  test_health_monitor.py  test_integration_rate_limit_trust.py  test_invoke_api.py  test_join_flow.py  test_match_capability.py  test_negotiation_pow.py  test_p2p_integration.py  test_p2p_node.py  test_p2p_utils.py  test_protocol_bridge_real.py  test_protocol_gateway.py  test_rate_limit.py  test_rate_limit_dynamic.py  test_rate_limit_enforcement.py  test_registry_core.py  test_registry_enforcement.py  test_registry_public_key_enforcement.py  (+17 more)
web/: Dockerfile  PR_DESCRIPTION.md  next.config.ts  package-lock.json  package.json
(+138 files in other folders)
